--- a/public/index.html
+++ b/public/index.html
@@ -169,7 +169,7 @@
     <div class="form-container">
       <h2>Contact</h2>
       <p>Get a free consultation call! Please provide your email, phone number, and the details of your project.</p>
-      <form action="" class="contact-form">
+      <form action="/" class="contact-form" method="POST">
         <div id="contact-card" class="contact-input-group row">
 
           <div class="col-sm-6">
