--- a/public/index.html
+++ b/public/index.html
@@ -182,21 +182,21 @@
           <div class="col-sm-6">
             <div class="input-field">
               <i class="bi bi-person-fill"></i>
-              <input class="contact-input" type="text" id="last-name" name="last-name" placeholder="Last Name" autocomplete="family-name>
+              <input class="contact-input" type="text" id="last-name" name="last-name" placeholder="Last Name" autocomplete="family-name">
             </div>
           </div>
 
           <div class="col-sm-6">
             <div class="input-field">
               <i class="bi bi-envelope-fill"></i>
-              <input class="contact-input" type="email" id="email" name="email" placeholder="Email Address autocomplete="email">
+              <input class="contact-input" type="email" id="email" name="email" placeholder="Email Address" autocomplete="email">
             </div>
           </div>
 
           <div class="col-sm-6">
             <div class="input-field">
               <i class="bi bi-telephone-fill"></i>
-              <input class="contact-input" type="tel" id="number" name="number" placeholder="Phone Number" autocomplete="tel>
+              <input class="contact-input" type="tel" id="number" name="number" placeholder="Phone Number" autocomplete="tel">
             </div>
           </div>
 
